# asdlc-framework

./: .env.example  .gitignore  .openclaude-profile.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_CONTEXT.md  README.md  README_EN.md  REFACTOR_PLAN.md  main.py  metodo_otimizado_para_agentes_codificadores.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_menu.py
.asdlc/agents/: agents - Atalho.lnk  architecture_agent.md  bug_hunter_agent.md  code_agent.md  requirements_agent.md  review_agent.md  test_agent.md
.asdlc/harness/20260425_architecture/: input_prompt.md
.asdlc/harness/20260425_code/: input_prompt.md  output.md
.asdlc/harness/20260425_review/: output.md
.asdlc/harness/20260425_test/: input_prompt.md  output.md
.asdlc/harness/20260425_tipo/: input_prompt.md  output.md
.asdlc/harness/20260426_architecture/: input_prompt.md
.asdlc/harness/20260426_code/: input_prompt.md  output.md
.asdlc/harness/20260426_review/: input_prompt.md  output.md
.asdlc/harness/20260426_test/: input_prompt.md  output.md
.asdlc/harness/test_kimi_review/: input_prompt.md  output.md
.claude/agents/: software-architect.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  SECURITY.md  SUPPORT.md  dependabot.yml  pull_request_template.md  release-drafter.yml  ruleset.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.kilo/plans/: 1777944101700-brave-comet.md
agentic_templates/: README.md  README_EN.md  TOOL_GUIDE.md  validate_stories.py
agentic_templates/skills/asdlc_bug_hunter/: SKILL.md
agentic_templates/skills/asdlc_context_compactor/: SKILL.md
agentic_templates/skills/asdlc_dashboard/: SKILL.md
agentic_templates/skills/asdlc_documentation_updater/: SKILL.md
agentic_templates/skills/asdlc_implementation/: SKILL.md
agentic_templates/skills/asdlc_story_generator/: SKILL.md
agentic_templates/stories/: INDEX.md  MEMORY.md
agentic_templates/stories/exemplo/: 20260407_notificacao_push.md  20260408_dashboard_graficos.md
agentic_templates/templates/: backlog_template.md  bug_template.md  learning_template.md  story_template.md
agentic_templates/templates/exemplo/: 20260407_notificacao_push.md  README.md
agentic_templates/workflows/: architecture_discovery.md  bug_resolution.md  create_asdlc_story.md  create_epic.md  dashboard.md  grill_requirements.md  implement_asdlc_story.md  scope_analysis.md  update_documentation.md  update_templates.md
asdlc/: __init__.py  agent_executor.py  dashboard_generator.py  llm_client.py  mcp_server.py  plan_generator.py  project_manager.py  story_manager.py  ui_manager.py  utils.py  validation_checker.py
docs/: README.md
examples/: README.md
examples/No A-SDLC/: README.md
examples/No A-SDLC/TodoList/: index.html  script.js  styles.css
examples/cli/: PROJECT_CONTEXT.md
examples/desktop/: PROJECT_CONTEXT.md
examples/desktop/prompts/: project_description_generator.md
examples/mobile/: PROJECT_CONTEXT.md
examples/web_api/: PROJECT_CONTEXT.md
examples/web_frontend/: PROJECT_CONTEXT.md  README.md  index.html  script.js  style.css
prompts/: README.md  bug_report_template.md  implementation_executor.md  project_description_generator.md  story_generator.md  validation_checker.md
scratch/: rich_demo.py
stories/: 20250802_200959_api_de_usu_rios_API_de_Usuários.md  20250803_104938_implementar_valida_o_Implementar_Validação_Automática_de_Conformidade_A-SDLC.md  20250803_104953_criar_diret_rio_exam_Criar_Diretório_Examples_com_Projetos_Demonstrativos_A-SDLC.md  20250803_105026_melhorar_documenta_o_Melhorar_Documentação_Completa_do_Framework_A-SDLC.md  20260425_223920_teste_de_integracao__Teste_de_Integracao_OpenRouter.md  20260425_223945_monitoramento_termic_Monitoramento_Termico_do_Processador.md  20260425_224047_otimizacao_de_perfor_Otimizacao_de_Performance_do_Filtro_Madgwick.md  20260425_224852_teste_de_modelo_v4_Teste_de_Modelo_V4.md  20260425_232806_feedbacktest_FeedbackTest.md  20260425_232911_feedbackflashtest_FeedbackFlashTest.md  20260425_232932_feedbackfinaltest_FeedbackFinalTest.md  20260425_232957_debugstory_DebugStory.md  20260425_233022_debugflushtest_DebugFlushTest.md  20260425_233040_debugdeeptest_DebugDeepTest.md  20260425_235129_finalsuccesstest_FinalSuccessTest.md  20260426_004628_visualfeedbackui_VisualFeedbackUI.md  20260426_004700_enhanced_ui_Enhanced_UI_Feedback.md  20260426_010425_rca_fix_final_RCA_Fix_Final.md  20260426_010556_rca_fix_final_v2_RCA_Fix_Final_V2.md  20260426_010836_rca_fix_final_v3_RCA_Fix_Final_V3.md  MEMORY.md
tests/: __init__.py  test_bug_asdlc.py  test_framework.py  test_validate_stories.py
(+25 files in other folders)
